--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
     <version>7.6.1</version>
     <scope>test</scope>
 </dependency>
+<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-testng</artifactId>
+			<version>2.14.0</version>
+		</dependency>
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
